--- a/aruco_test/CMakeLists.txt
+++ b/aruco_test/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   sensor_msgs
   cv_bridge
+  image_transport
 )
 
 ## System dependencies are found with CMake's conventions
