--- a/aruco_test/package.xml
+++ b/aruco_test/package.xml
@@ -46,12 +46,14 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>cv_bridge</build_depend>
+  <build_depend>image_transport</build_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>cv_bridge</run_depend>
+  <run_depend>image_transport</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
