--- a/ardrone_vislab/cvg_sim_gazebo_plugins/package.xml
+++ b/ardrone_vislab/cvg_sim_gazebo_plugins/package.xml
@@ -48,6 +48,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>cv_bridge</build_depend>
   <run_depend>ardrone_autonomy</run_depend>
   <run_depend>gazebo_ros</run_depend>
   <run_depend>geometry_msgs</run_depend>
@@ -56,6 +57,7 @@
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>cv_bridge</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
